@@ -97,6 +97,7 @@ proc issue_1473_setup  {} {
    }
 
    # backup old complex
+   unset -nocomplain complex_backup
    set complex_backup "$CHECK_PROTOCOL_DIR/complex.txt"
    puts $CHECK_OUTPUT "backup current complex to $complex_backup"
    set ret [catch { eval exec "$CHECK_PRODUCT_ROOT/bin/$CHECK_ARCH/qconf -sc > $complex_backup" } output]
